# CHIRPP

./: .gitignore  LICENSE  README.md  allParamCheck.sh  chime_zap.psh  config.sh  dateCheck.sh  find_nchan.py  get_data_locations.py  processing_creation.sh  pyproject.toml  run_pipeline.py  tim_creation.sh
src/CHIRPP/: CHIRPP_utils.py  find_nchan.py  get_data_locations.py  new_data.py  new_pulsar.py  outlier_excision.py  timing_fit.py  write_scripts.py
src/CHIRPP/bash/: allParamCheck.sh  beamWeight.sh  clean.sh  clean5G.sh  config.sh  ephemNconvert.sh  mk_diaPlts.sh  newParamCheck.sh  processing_creation.sh  scrunch.sh  template50_creation.sh  unpack_tar.sh
