[project]
name = "CHIRPP"
version = "0.0.1"
authors = [
  { name="William Fiore", email="wllmfiore8@gmail.com" },
]
description = "A processing pipeline for CHIME/Pulsar data"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.0",
    "astropy>=5.0.5",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/CHIME-Pulsar-Timing/CHIRPP"
Issues = "https://github.com/CHIME-Pulsar-Timing/CHIRPP/issues"